ufsutils (7.1-3) UNRELEASED; urgency=low

  * Use $(filter ...) instead of $(findstring ...) to extract space separated
    options from DEB_BUILD_OPTIONS in debian/rules.

 -- Guillem Jover <guillem@debian.org>  Sat, 18 Apr 2009 01:47:10 +0200

ufsutils (7.1-2) unstable; urgency=low

  [ Petr Salinger ]
  * New upstream version (RELENG_7_1_0_RELEASE)

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 11 Jan 2009 12:01:23 +0100

ufsutils (7.0-2) unstable; urgency=low

  * debian/patches/01_libufs.patch Link libufs with libbsd.
  * debian/patches/*: Use LDADD += instead of LDADD =.

 -- Aurelien Jarno <aurel32@debian.org>  Wed, 06 Aug 2008 17:21:09 +0200

ufsutils (7.0-1) unstable; urgency=low

  [Petr Salinger]
  * Add build-dependency on quilt, and use quilt in debian/rules
  * Based on upstream version 7.0
  * Include all needed sources in debian/upstream.sh
  * Make it build much cleanly on kfreebsd - ino_t is int32 on kfreebsd-any !!!
  * Fix segfault of fsck.ufs on non kfreebsd. (Closes: #335482)

  [ Guillem Jover ]
  * Fix Subversion repository address.
  * Added PHONY targets:
    - debian/patch.mk
  * Use root gid as a fallback for operator on mkfs.ufs. (Closes: #293411)
  * Updated upstream tarball creator (debian/upstream.sh).
  * Upgraded to debhelper compatibility level 5.
  * Reindent debian/copyright.
  * Make debian/patch.mk privide an unpatch target. Switch patch to single
    colon target.

  [ Aurelien Jarno ]
  * Switch maintainer to GNU/kFreeBSD Maintainers, add myself to uploaders.
  * Bump Standard-Versions to 3.8.0 (no changes).
  * Fix debian/copyright.
  * Don't ignore make clean errors.
  * Remove .pc/ on clean.
  * Set the priority to required on GNU/kFreeBSD, optional on other systems.
  * add Vcs-* fields into debian/control.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 Aug 2008 14:48:49 +0200

ufsutils (0.0+2004.06.26-4) experimental; urgency=low

  * Fix integer overflow on get_block_device_size on GNU/Linux.