@@ -2,6 +2,7 @@ ufsutils (7.1-3) UNRELEASED; urgency=low
 
   * Use $(filter ...) instead of $(findstring ...) to extract space separated
     options from DEB_BUILD_OPTIONS in debian/rules.
+  * Remove commented out lines in debian/rules.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 18 Apr 2009 01:47:10 +0200
 
